set map with leaflet hash/markercluster/search/fullscreen & glacierdata

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -7,26 +7,56 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gletscher Tirols - by gspritzt - </title>
 
+  <!--FONTS-->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!--FONTS-->
 
+  <!--tab pic-->
+  <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
+  <!--tab pic-->
+
+  <!--LEAFLET-->
   <link rel="stylesheet" href="js/leaflet/leaflet.css" />
   <script src="js/leaflet/leaflet.js"></script>
+  <!--LEAFLET-->
 
   <!--leaflet.fullscreen-->
   <link rel="stylesheet" href="js/leaflet.fullscreen/leaflet.fullscreen.css" />
   <script src="js/leaflet.fullscreen/Leaflet.fullscreen.js"></script>
   <!--leaflet.fullscreen-->
 
-  <!--additional leafletplugin-->
+  <!--leaflet.search-->
+  <link rel="stylesheet" href="js/leaflet.search/leaflet-search.min.css"/>
+  <script src="js/leaflet.search/leaflet-search.min.js"></script>
+  <!--leaflet.search-->
+
+  <!--leaflet.hash-->
+  <script src="js/leaflet.hash/leaflet-hash.js" ></script>
+  <!--leaflet.hash-->
+
+  <!--leaflet.markerCluster-->
+  <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.css"/>
+  <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.Default.css"/>
+  <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
+  <!--leaflet.markerCluster-->
 
   <!--additional leafletplugin-->
 
+  <!--additional leafletplugin-->
+
+  <!--leaflet.gpx-->
   <script src="js/leaflet.gpx/gpx.js"></script>
+  <!--leaflet.gpx-->
 
-  <script src="data/Tirol_Gletscherinventar_3_ETRS89.js"></script>
+  <!--Geojson Data-->
+  <script src="data/GI3_Tirol_2006_polygon.js"></script> <!-- TODO:  -->
+  <script src="data/GI3_Tirol_2006_points.js"></script>
+  <!--Geojson Data-->
 
+  <!--MAP-->
   <link rel="stylesheet" href="style_map.css" />
   <script defer src="Gspritzt_map.js"></script>
+  <!--MAP-->
 
 </head>
 
