updated css and html connections

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -49,7 +49,7 @@
   <!--leaflet.gpx-->
 
   <!--Geojson Data-->
-  <script src="data/GI3_Tirol_2006_polygon.js"></script> <!-- TODO:  -->
+  <script src="data/GI3_Tirol_2006_polygon.js"></script> 
   <script src="data/GI3_Tirol_2006_points.js"></script>
   <!--Geojson Data-->
 
