--- a/about.html
+++ b/about.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8">
     <title>Gspritzt Projekt Webmapping 2018! - Über uns</title>
 
+    <!--FONTS-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!--FONTS-->
+
+    <!--tab pic-->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
+    <!--tab pic-->
+
     <link rel="stylesheet" href="style.css" />
 
   </head>
@@ -15,5 +22,17 @@
       <li>test</li>
 
     </ul>
+
+
+    <hr />
+
+    <div id="footer" class="gray">
+      <a class="back" href="index.html">
+              <i class="fas fa-arrow-alt-circle-left"></i> Home</a>
+      <a class="next" href="Gspritzt_map.html"> Karte
+              <i class="fas fa-arrow-alt-circle-right"></i>
+          </a>
+    </div>
+
   </body>
 </html>
