--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8">
     <title>Gspritzt Projekt Webmapping 2018!</title>
 
+    <!--FONTS-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!--FONTS-->
+
+    <!--tab pic-->
+    <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
+    <!--tab pic-->
+
     <link rel="stylesheet" href="style.css" />
 
   </head>
@@ -16,5 +23,17 @@
       <li><a href="about.html"> Über uns</a></li>
 
     </ul>
+
+    <hr />
+
+    <div id="footer" class="gray">
+      <a class="back" href="Gspritzt_map.html">
+              <i class="fas fa-arrow-alt-circle-left"></i>Karte</a>
+      <a class="next" href="about.html">About
+              <i class="fas fa-arrow-alt-circle-right"></i>
+          </a>
+    </div>
+
+
   </body>
 </html>
