changed optical appearence

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 
   </head>
   <body>
-    <h1>Gspritzt Projekt Webmapping 2018!</h1>
-    <p>Hier entsteht das  Gspritzt Projekt Webmapping 2018! ... very WIP</p>
+    <div id="header">
+      <h2 class="white">Gspritzt Projekt Webmapping 2018!</h2>
+      <h3 class="white">Hier entsteht das  Gspritzt Projekt Webmapping 2018! ... very WIP</h3>
+    </div>
+
     <ul>
       <li><a href="Gspritzt_map.html"> Project Karte</a></li>
       <li><a href="about.html"> Über uns</a></li>
