--- a/about.html
+++ b/about.html
@@ -16,8 +16,11 @@
 
   </head>
   <body>
-    <h1>Wir</h1>
-    <p>very WIP</p>
+    <div id="header">
+      <h2 class="white">Über Uns</h2>
+      <h3 class="white">very WIP</h3>
+    </div>
+
     <ul>
       <li>test</li>
 
