fixed path leaflet.fullscreen

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -21,8 +21,8 @@
   <!--LEAFLET-->
 
   <!--leaflet.fullscreen-->
-  <link rel="stylesheet" href="js/leaflet.fullscreen/leaflet.fullscreen.css" />
-  <script src="js/leaflet.fullscreen/Leaflet.fullscreen.js"></script>
+  <link rel="stylesheet" href="js/Leaflet.fullscreen/Leaflet.fullscreen.css" />
+  <script src="js/Leaflet.fullscreen/Leaflet.fullscreen.js"></script>
   <!--leaflet.fullscreen-->
 
   <!--leaflet.search-->
@@ -49,7 +49,7 @@
   <!--leaflet.gpx-->
 
   <!--Geojson Data-->
-  <script src="data/GI3_Tirol_2006_polygon.js"></script> 
+  <script src="data/GI3_Tirol_2006_polygon.js"></script>
   <script src="data/GI3_Tirol_2006_points.js"></script>
   <!--Geojson Data-->
 
