--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -21,7 +21,7 @@
   <!--LEAFLET-->
 
   <!--leaflet.fullscreen-->
-  <link rel="stylesheet" href="js/Leaflet.fullscreen/Leaflet.fullscreen.css" />
+  <link rel="stylesheet" href="js/Leaflet.fullscreen/leaflet.fullscreen.css" />
   <script src="js/Leaflet.fullscreen/Leaflet.fullscreen.js"></script>
   <!--leaflet.fullscreen-->
 
