todo picture for leaflet fullscreen missing

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -22,7 +22,7 @@
 
   <!--leaflet.fullscreen-->
   <link rel="stylesheet" href="js/Leaflet.fullscreen/leaflet.fullscreen.css" />
-  <script src="js/Leaflet.fullscreen/Leaflet.fullscreen.js"></script>
+  <script src="js/Leaflet.fullscreen/Leaflet.fullscreen.js"></script>  <!-- TODO:  picture for leaflet fullscreen missing -->
   <!--leaflet.fullscreen-->
 
   <!--leaflet.search-->
