added relationsmap/added jquery to js data folder/dropdownmenu working

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -99,7 +99,7 @@
   <div id="footer" class="gray">
     <a class="back" href="index.html">
             <i class="fas fa-arrow-alt-circle-left"></i> Home</a>
-    <a class="next" href="about.html">About
+    <a class="next" href="relationmap.html">Karte mit Vergleichen
             <i class="fas fa-arrow-alt-circle-right"></i>
         </a>
   </div>
