--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
     <!--tab pic-->
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
 
   </head>
   <body>
@@ -23,7 +23,7 @@
 
     <ul>
       <li><a href="Gspritzt_map.html"> Project Karte</a></li>
-      <li><a href="about.html"> Über uns</a></li>
+      <li><a href="relationmap.html"> Karte mit Vergleichen</a></li>
 
     </ul>
 
@@ -32,7 +32,7 @@
     <div id="footer" class="gray">
       <a class="back" href="Gspritzt_map.html">
               <i class="fas fa-arrow-alt-circle-left"></i>Karte</a>
-      <a class="next" href="about.html">About
+      <a class="next" href="relationmap.html">Karte mit Vergleichen
               <i class="fas fa-arrow-alt-circle-right"></i>
           </a>
     </div>
