Suedtirol Marker_Polygone

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -53,6 +53,11 @@
   <script src="data/GI3_Tirol_2006_points.js"></script>
   <!--Geojson Data-->
 
+  <!--Geojson Data-->
+  <script src="data/GlacierInventory_2006_suedtirol_points.js"></script>
+  <script src="data/GlacierInventory_2006_suedtirol_polygon.js"></script>
+  <!--Geojson Data-->
+
   <!--MAP-->
   <link rel="stylesheet" href="style_map.css" />
   <script defer src="Gspritzt_map.js"></script>
