--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -12,7 +12,7 @@
   <!--FONTS-->
 
   <!--tab pic-->
-  <link rel="icon" type="image/png" sizes="32x32" href="images/Umbal_Kees.jpg">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
   <!--tab pic-->
 
   <!--LEAFLET-->
