updated Border for Map and Markercluster for Changemap

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -48,12 +48,17 @@
   <script src="js/leaflet.gpx/gpx.js"></script>
   <!--leaflet.gpx-->
 
+  <!--Geojson Data Border-->
+  <script src="data/suedtirol_border_line.js"></script>
+  <script src="data/tirol_border_line.js"></script>
   <!--Geojson Data-->
+
+  <!--Geojson Data Tirol-->
   <script src="data/GI3_Tirol_2006_polygon.js"></script>
   <script src="data/GI3_Tirol_2006_points.js"></script>
   <!--Geojson Data-->
 
-  <!--Geojson Data-->
+  <!--Geojson Data Südtirol-->
   <script src="data/GlacierInventory_2006_suedtirol_points.js"></script>
   <script src="data/GlacierInventory_2006_suedtirol_polygon.js"></script>
   <!--Geojson Data-->
@@ -70,14 +75,6 @@
     <h2 class="white">Gletscher Tirols</h2>
     <h3 class="white">Meltin!?</h3>
   </div>
-
-  <!--<div class="author">
-    <img src="images/user.jpg" alt="Ihr Reiseleiter" />
-    <p class="gray">
-      <a href="mailto:johannes.branke@student.uibk.ac.at">brankej</a>
-      <a href="https://brankej.github.io/biketirol/index.html">https:/brankej.github.io/biketirol/</a>
-    </p>
-  </div>-->
 
   <hr />
 
