--- a/relationmap.html
+++ b/relationmap.html
@@ -22,6 +22,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
     <!--tab pic-->
 
+    <!--leaflet.markerCluster-->
+    <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.css"/>
+    <link rel="stylesheet" href="js/leaflet.markercluster/MarkerCluster.Default.css"/>
+    <script src="js/leaflet.markercluster/leaflet.markercluster.js"></script>
+    <!--leaflet.markerCluster-->
+
+    <!--Geojson Data Tirol-->
+    <script src="data/GI3_Tirol_2006_points.js"></script>
+    <!--Geojson Data-->
+
     <link rel="stylesheet" href="style.css" />
 
   </head>
@@ -57,7 +67,7 @@
     <hr />
 
     <h2> Vergleichskarte</h2>
-    
+
     <div id="footer" class="gray">
       <a class="back" href="index.html">
               <i class="fas fa-arrow-alt-circle-left"></i> Home</a>
