--- a/relationmap.html
+++ b/relationmap.html
@@ -52,14 +52,15 @@
     <div id='map2'></div>
 
     <div id="map2basemaps" class="basemaps-wrapper leaflet-bar">
-      <select name="basemaps">
-        <option value="ortho_1970_1982" disabled>1970-1982</option>
+      <!--<select name="basemaps">
+        <option value="ortho_aktuell_rgb" disabled>Aktuell</option>
+
         <option value="ortho_1999_2004">1999-2004</option>
         <option value="ortho_2004_2009">2004-2009</option>
         <option value="ortho_2009_2012">2009-2012</option>
         <option value="ortho_2013_2015">2013-2015</option>
         <option value="ortho_aktuell_rgb">Aktuell<options>
-      </select>
+      </select>-->
     </div>
 
 
