Anpassung der Startseite

--- a/index.html
+++ b/index.html
@@ -1,42 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Gspritzt Projekt Webmapping 2018!</title>
 
-    <!--FONTS-->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <!--FONTS-->
+<head>
+  <meta charset="utf-8">
+  <title>Gspritzt Projekt Webmapping 2018!</title>
 
-    <!--tab pic-->
-    <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
-    <!--tab pic-->
+  <!--FONTS-->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <!--FONTS-->
 
-    <link rel="stylesheet" href="styles.css" />
+  <!--tab pic-->
+  <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
+  <!--tab pic-->
 
-  </head>
+  <link rel="stylesheet" href="styles.css" />
+
+</head>
+
+<body>
+  <div id="header">
+    <h2 class="white">Gspritzt Projekt Webmapping 2018!</h2>
+    <h3 class="white">Hier entsteht das Gspritzt Projekt Webmapping 2018! ... very WIP</h3>
+  </div>
+
+  <ul>
+    <li>
+      <a href="Gspritzt_map.html"> Project Karte</a>
+    </li>
+    <li>
+      <a href="relationmap.html"> Karte mit Vergleichen</a>
+    </li>
+
+  </ul>
+
+  <hr />
+
+
   <body>
-    <div id="header">
-      <h2 class="white">Gspritzt Projekt Webmapping 2018!</h2>
-      <h3 class="white">Hier entsteht das  Gspritzt Projekt Webmapping 2018! ... very WIP</h3>
-    </div>
 
-    <ul>
-      <li><a href="Gspritzt_map.html"> Project Karte</a></li>
-      <li><a href="relationmap.html"> Karte mit Vergleichen</a></li>
-      
-    </ul>
- 
-      <hr />
 
-    <div id="footer" class="gray">
-      <a class="back" href="Gspritzt_map.html">
-              <i class="fas fa-arrow-alt-circle-left"></i>Karte</a>
-      <a class="next" href="relationmap.html">Karte mit Vergleichen
-              <i class="fas fa-arrow-alt-circle-right"></i>
-          </a>
-    </div>
+    <hr />
+
+
+    <div class="article">
+      <h1>Das Klima und der Gletscherrückgang</h1>
+
+      <p>
+        Das Klima beschreibt den Zustand des Klimasystems über lange Zeiträume von Jahrzehnten bis hin zu erdgeschichtlichen Zeitskalen.
+        Das Klimasystem besteht aus verschiedenen Komponenten (Atmosphäre, Hydrosphäre, Lithosphäre, Biosphäre, Kryosphäre).
+        Zwischen ihnen besteht ein stetiger Austausch von Energie und Masse über bestimmte Flüsse (Strahlung, Wind, Verdunstung,
+        Niederschlag, Meeresströmungen, chemische Umwandlungen usw.), die ein energetisches Gleichgewicht der Subsysteme
+        anstreben. Diese Phänomene werden durch den Energiefluss von der Sonne sowie die ungleiche Verteilung dieser Strahlungsenergie
+        auf der Erde gesteuert. Als wichtige Indikatoren eines potenziellen Ungleichgewichts dienen dabei Gletscher.
+      </p>
+
+      <img src="images/dachstein.JPG" alt="Gletscher am Karlseisfeld, Dachstein" />
+      <p>Gletscher am Karlseisfeld, Dachstein (Quelle: http://www.gletscherarchiv.de) </p>
+      <!--<div id="map"></div>-->
+
+      <h2> Glaziologie: Wissenschaft von Eis und Schnee </h2>
+
+      <p>
+        Die Glaziologie widmet sich der Erforschung aller Aspekte der Kryosphäre, also der mit Eis und Schnee bedeckten Teile der
+        Erdoberfläche: der kontinentalen Eisschilde und Gebirgsgletscher, des Schelfeises, der Meeresvereisung, des Permafrosts
+        und der saisonalen Schneedecke. Die Ergebnisse der Glaziologie tragen wesentlich zum Verständnis des globalen Klimasystems
+        bei (ZAMG). Als ein zentrales Untersuchungsgebiet der glaziologie im Alpenraum, gilt die Erforschung der Gletscher
+        und deren Prozessabläufe. Dabei stehen die Wechselwirkungen zwischen den klimatischen gegebenheiten und den Gletscherveränderungen
+        besonders im Fokus.
+      </p>
+      <!-- -->
+
+      <img src="images/glaziologie.JPG" alt="glaziologie" />
+      <p>Glaziologische Messungsarbeiten (Quelle: https://www.andreafischer.at/) </p>
+
+      <h3>Wechselwirkungen mit dem Klima rücken in den Mittelpunkt </h3>
+
+      <p>
+        Das Beschleunigen und die vertikale Ausdünnung bei gleichzeitigem Rückzug der großen Eisströme der kontinentalen Eisschilde
+        Grönlands und der Antarktis, der weltweite Massenverlust der Gebirgsgletscher, das unvorhersehbare, plötzliche Abreißen
+        mehrerer ausgedehnter Eisschelfe der Antarktischen Halbinsel, der stetige Rückgang der arktischen Meeresvereisung,
+        der Rückgang des alpinen sowie des arktischen Permafrostes und nicht zuletzt der langsame Anstieg des Meeresspiegels
+        sind Folgen einer Klimaänderung, deren Wirkungsprozesse auf die Kryosphäre – einschließlich der zahlreichen Rückkoppelungseffekte
+        – noch unzureichend verstanden werden (ZAMG).
+
+      </p>
+
+      <h3>Reaktion der Gletscher auf das Klima</h3>
+
+      <p>
+        Gletscher reagieren unterschiedlich Gebirgsgletscher gehören zu den sichtbarsten Indikatoren einer Klimaveränderung. Weil
+        Gebirgsgletscher mehr oder weniger träge auf ein Klimasignal reagieren, sind Flächen-, Volumen- und Längenänderungen
+        schwer zu interpretieren. Langjährige Messreihen der Massenbilanz hingegen liefern das Klimasignal ungefiltert. Gebirgsgletscher
+        reagieren empfindlich auf die Änderungen im Klimasystem: Mehr Schmelze (Ablation) in Folge höherer Lufttemperatur
+        und stärkerer Sonnenstrahlung bewirkt einen Verlust an Gletschermasse, mehr Ablagerung von Schnee (Akkumulation)
+        in Folge niedrigerer Lufttemperatur und erhöhten Niederschlags begünstigt einen Gletschervorstoß. Gletscher interagieren
+        mit dem Klimasystem in Form von Rückkopplungen: Schnee an der Gletscheroberfläche reflektiert bis zu 90 % der einkommenden
+        Sonnenstrahlung in die Atmosphäre, aperes Gletschereis hingegen nur 20 bis 40 % (ZAMG).
+      </p>
+
+
+
+      <!--<img src="images/Ablationspegel1.JPG" alt="Ausgeschmolzene Ablationspegel am Rieserferner" alt="Ausgeschmolzene Ablationspegel am Rieserferner"
+      /> -->
+
+
+      <h3> header </h3>
+      <p>
+        text
+
+      </p>
+
+      <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php 
+      <li>
+        <a href="http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">
+          Archiv der Gletscherberichte des Österreichischen Alpenvereins</a>
+      </li> -->
+
+
+      <div id="footer" class="gray">
+        <a class="back" href="Gspritzt_map.html">
+          <i class="fas fa-arrow-alt-circle-left"></i>Karte</a>
+        <a class="next" href="relationmap.html">Karte mit Vergleichen
+          <i class="fas fa-arrow-alt-circle-right"></i>
+        </a>
+      </div>
 
 
   </body>
+
 </html>
