--- a/index.html
+++ b/index.html
@@ -88,14 +88,18 @@
       <h3>Reaktion der Gletscher auf das Klima</h3>
 
       <p>
-        Gletscher reagieren unterschiedlich Gebirgsgletscher gehören zu den sichtbarsten Indikatoren einer Klimaveränderung. Weil
-        Gebirgsgletscher mehr oder weniger träge auf ein Klimasignal reagieren, sind Flächen-, Volumen- und Längenänderungen
-        schwer zu interpretieren. Langjährige Messreihen der Massenbilanz hingegen liefern das Klimasignal ungefiltert. Gebirgsgletscher
-        reagieren empfindlich auf die Änderungen im Klimasystem: Mehr Schmelze (Ablation) in Folge höherer Lufttemperatur
-        und stärkerer Sonnenstrahlung bewirkt einen Verlust an Gletschermasse, mehr Ablagerung von Schnee (Akkumulation)
-        in Folge niedrigerer Lufttemperatur und erhöhten Niederschlags begünstigt einen Gletschervorstoß. Gletscher interagieren
-        mit dem Klimasystem in Form von Rückkopplungen: Schnee an der Gletscheroberfläche reflektiert bis zu 90 % der einkommenden
-        Sonnenstrahlung in die Atmosphäre, aperes Gletschereis hingegen nur 20 bis 40 % (ZAMG).
+        Gebirgsgletscher gehören zu den sichtbarsten Indikatoren einer Klimaveränderung. Weil Gebirgsgletscher mehr oder weniger
+        träge auf ein Klimasignal reagieren, sind Flächen-, Volumen- und Längenänderungen schwer zu interpretieren. Langjährige
+        Messreihen der Massenbilanz hingegen liefern das Klimasignal ungefiltert. Gebirgsgletscher reagieren empfindlich
+        auf die Änderungen im Klimasystem: Mehr Schmelze (Ablation) in Folge höherer Lufttemperatur und stärkerer Sonnenstrahlung
+        bewirkt einen Verlust an Gletschermasse, mehr Ablagerung von Schnee (Akkumulation) in Folge niedrigerer Lufttemperatur
+        und erhöhten Niederschlags begünstigt einen Gletschervorstoß. Gletscher interagieren mit dem Klimasystem in Form
+        von Rückkopplungen: Schnee an der Gletscheroberfläche reflektiert bis zu 90 % der einkommenden Sonnenstrahlung in
+        die Atmosphäre, aperes Gletschereis hingegen nur 20 bis 40 % (ZAMG). Die österreichischen Gletscher sind von wesentlicher
+        Bedeutung für das Landschaftsbild und der Identifikation mit diesem. Lokal und regional betrachtet sind Gebirgsgletscher
+        vor allem als Süßwasserspeicher, als touristische Attraktion und als potenzielle Gefahrenquelle (z.B. Gletscherseeausbruch,
+        Eissturz) von Bedeutung. Um nennenswerte Auswirkungen auf das Klima oder die Wasserversorgung auszuüben, sind sie
+        aber zu klein.
 
 
       </p>
@@ -120,7 +124,19 @@
           Archiv der Gletscherberichte des Österreichischen Alpenvereins</a>
       </li> -->
 
+      <h3>Links</h3>
+      <ul>
 
+        <li>
+          <a href="https://www.zamg.ac.at/cms/de/klima"> Zentralanstalt für Meteorologie und Geodynamik (ZAMG)</a>
+        </li>
+        <li>
+          <a href=">https://www.eea.europa.eu/data-and-maps/data-providers-and-partners/world-glacier-monitoring-service">
+
+            World Glacier Monitoring Service (WGMS) </a>
+        </li>
+
+      </ul>
       <div id="footer" class="gray">
         <a class="back" href="Gspritzt_map.html">
           <i class="fas fa-arrow-alt-circle-left"></i>Karte</a>
