next time weiter

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         Zwischen ihnen besteht ein stetiger Austausch von Energie und Masse über bestimmte Flüsse (Strahlung, Wind, Verdunstung,
         Niederschlag, Meeresströmungen, chemische Umwandlungen usw.), die ein energetisches Gleichgewicht der Subsysteme
         anstreben. Diese Phänomene werden durch den Energiefluss von der Sonne sowie die ungleiche Verteilung dieser Strahlungsenergie
-        auf der Erde gesteuert. Als wichtige Indikatoren eines potenziellen Ungleichgewichts dienen dabei Gletscher.
+        auf der Erde gesteuert. Als wichtige Indikatoren eines potenziellen Ungleichgewichts dienen dabei Gletscher (ZAMG).
       </p>
 
       <img src="images/dachstein.JPG" alt="Gletscher am Karlseisfeld, Dachstein" />
@@ -66,7 +66,7 @@
         und der saisonalen Schneedecke. Die Ergebnisse der Glaziologie tragen wesentlich zum Verständnis des globalen Klimasystems
         bei (ZAMG). Als ein zentrales Untersuchungsgebiet der glaziologie im Alpenraum, gilt die Erforschung der Gletscher
         und deren Prozessabläufe. Dabei stehen die Wechselwirkungen zwischen den klimatischen gegebenheiten und den Gletscherveränderungen
-        besonders im Fokus.
+        besonders im Fokus (ZAMG).
       </p>
       <!-- -->
 
