--- a/index.html
+++ b/index.html
@@ -13,34 +13,23 @@
   <link rel="icon" type="image/png" sizes="32x32" href="images/gspritzt.png">
   <!--tab pic-->
 
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style_index.css" />
 
 </head>
 
 <body>
   <div id="header">
     <h2 class="white">Gspritzt Projekt Webmapping 2018!</h2>
-    <h3 class="white">Hier entsteht das Gspritzt Projekt Webmapping 2018! ... very WIP</h3>
+    <h3 class="white">Gspritzt Projekt Webmapping 2018! ... very WIP</h3>
   </div>
-
-  <ul>
-    <li>
-      <a href="Gspritzt_map.html"> Project Karte</a>
-    </li>
-    <li>
-      <a href="relationmap.html"> Karte mit Vergleichen</a>
-    </li>
-
-  </ul>
-
-  <hr />
-
 
   <body>
 
-
-    <hr />
-
+    <div class="topnav">
+      <a href="index.html" style="float:left">Erklärung Gletscherrückgang</a>
+      <a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a>
+      <a href="relationmap.html" style="float:right">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a>
+    </div>
 
     <div class="article">
       <h1>Das Klima und der Gletscherrückgang</h1>
@@ -55,7 +44,7 @@
       </p>
 
       <img src="images/dachstein.JPG" alt="Gletscher am Karlseisfeld, Dachstein" />
-      <p>Gletscher am Karlseisfeld, Dachstein (Quelle: http://www.gletscherarchiv.de) </p>
+      <p>Gletscher am Karlseisfeld, Dachstein (Quelle: http://www.gletscherarchiv.de) </p>   <!-- TODO:  vlt eher ein Tiroler Bildvgl.? -->
       <!--<div id="map"></div>-->
 
       <h2> Glaziologie: Wissenschaft von Eis und Schnee </h2>
@@ -118,7 +107,7 @@
 
 
       <h1> in Arbeit </h1>
-      <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php 
+      <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php
       <li>
         <a href="http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">
           Archiv der Gletscherberichte des Österreichischen Alpenvereins</a>
@@ -137,12 +126,9 @@
         </li>
 
       </ul>
+      
       <div id="footer" class="gray">
-        <a class="back" href="Gspritzt_map.html">
-          <i class="fas fa-arrow-alt-circle-left"></i>Karte</a>
-        <a class="next" href="relationmap.html">Karte mit Vergleichen
-          <i class="fas fa-arrow-alt-circle-right"></i>
-        </a>
+        <p>placeholder footer</p>
       </div>
 
 
