added new color navi & coloured on stay

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -77,9 +77,11 @@
   </div>
 
   <div class="topnav">
-    <a href="index.html" style="float:left">Erklärung Gletscherrückgang</a>
-    <a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a>
-    <a href="relationmap.html" style="float:right">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a>
+    <ul>
+      <li><a href="index.html" style="float:left">Erklärung Gletscherrückgang</a></li>
+      <li><a href="Gspritzt_map.html" class="active">Übersichtskarte Gletscher Tirol</a></li>
+      <li><a href="relationmap.html">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a></li>
+    </ul>
   </div>
 
 
@@ -138,7 +140,7 @@
         flächenhafte Verteilung der Massenbilanz.</p>
 
         <!--https://www.zamg.ac.at/cms/de/klima/informationsportal-klimawandel/standpunkt/klimaforschung/glaziologie/massenbilanz-gletscher-->
-        
+
         <img src="images/Ablationspegel.JPG" alt="Beispiel für einen Ablationspegel" alt="Beispiel für einen Ablationspegel"/>
         <img src="images/Ablationspegel1.JPG" alt="Ausgeschmolzene Ablationspegel am Rieserferner" alt="Ausgeschmolzene Ablationspegel am Rieserferner" />
 
