--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
   <body>
 
     <div class="topnav">
-      <a href="index.html" style="float:left">Erklärung Gletscherrückgang</a>
-      <a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a>
-      <a href="relationmap.html" style="float:right">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a>
+      <ul>
+        <li><a href="index.html" style="float:left" class="active">Erklärung Gletscherrückgang</a></li>
+        <li><a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a></li>
+        <li><a href="relationmap.html">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a></li>
+      </ul>
     </div>
 
     <div class="article">
@@ -98,7 +100,7 @@
 
 
       <!--<img src="images/Ablationspegel1.JPG" alt="Ausgeschmolzene Ablationspegel am Rieserferner" alt="Ausgeschmolzene Ablationspegel am Rieserferner"
-      
+
 
 
       <h3> header </h3>
@@ -116,7 +118,7 @@
       </li> -->
 
       <p>Weiterführende Informationen unter:</p>
-     
+
       <!--<h3>Links</h3>-->
       <ul>
 
