--- a/relationmap.html
+++ b/relationmap.html
@@ -47,9 +47,11 @@
     </div>
 
     <div class="topnav">
-      <a href="index.html" style="float:left">Erklärung Gletscherrückgang</a>
-      <a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a>
-      <a href="relationmap.html" style="float:right">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a>
+      <ul>
+        <li><a href="index.html" style="float:left">Erklärung Gletscherrückgang</a></li>
+        <li><a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a></li>
+        <li><a href="relationmap.html" class="active">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a></li>
+      </ul>
     </div>
 
     <h2><em><strong>Orthophoto Vergleichskarte Vergangenheit / Jetzt</strong></em></h2>
