--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -97,8 +97,8 @@
     Für Südtirol gibt das italienische Gletscherinventar insgesamt 212 Gletscher an. Deren Gesamtfläche 
     beträgt 2006 ca. 94,09 km². Im Vergleich zu 1997 waren es noch 161,28 km² in Südtirol. Die 212 Südtiroler
     Gletscher sind von West nach Ost  und von Nord nach Süd auf 7 Bergketten verteilt: Ortler Cevedale-Gruppe,
-     Ötztaler Alpen (Weißkugel und Similaun), Texelgruppe, Stubaier  und Ahrntaler Alpen mit Hochfeiler, Rieserferner Gruppe,
-      Hohe Tauern mit Dreiherrenspitze (Autonome Provinz Bozen).</p>
+    Ötztaler Alpen (Weißkugel und Similaun), Texelgruppe, Stubaier  und Ahrntaler Alpen mit Hochfeiler, Rieserferner Gruppe,
+    Hohe Tauern mit Dreiherrenspitze (Autonome Provinz Bozen).</p>
     
 
     <div id="map"></div>
@@ -167,8 +167,7 @@
         erklären Gerhard Karl Lieb und Andreas Kellerer-Pirklbauer (Östereichischer Alpenverein). </p>
 
         <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php -->
-        <p>Weiter infos und ältere Gletscherberichte unter:</p>
-        <li> <a href= "http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php"> Archiv der Gletscherberichte des Österreichischen Alpenvereins</a></li>
+        <p>Weiter infos und ältere Gletscherberichte unter: <a href= "http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">Gletscherberichte des Österreichischen Alpenvereins</a> </p>
 
 
     <h3>Links</h3>
