fixed image links

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         Gletscher. Daher wird innerhalb Klimaforschung, der Glaziologie immer größere Bedeutung beigemessen.
       </p>
 
-      <img src="images/dachstein.JPG" alt="Gletscher am Karlseisfeld, Dachstein" />
+      <img src="images/dachstein.jpg" alt="Gletscher am Karlseisfeld, Dachstein" />
       <p>Gletscher am Karlseisfeld, Dachstein (Quelle: http://www.gletscherarchiv.de) </p>
       <!-- TODO:  vlt eher ein Tiroler Bildvgl.? -->
       <!--<div id="map"></div>-->
@@ -63,7 +63,7 @@
       </p>
       <!-- -->
 
-      <img src="images/glaziologie.JPG" alt="glaziologie" />
+      <img src="images/glaziologie.jpg" alt="glaziologie" />
       <p>Glaziologische Messungsarbeiten (Quelle: https://www.andreafischer.at/) </p>
 
       <h3>Wechselwirkungen mit dem Klima rücken in den Mittelpunkt </h3>
