added new relationsmap for South Tyrol

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -73,14 +73,15 @@
 <body>
   <div id="header">
     <h2 class="white">Gletscher Tirols</h2>
-   
+
   </div>
 
   <div class="topnav">
     <ul>
       <li><a href="index.html" style="float:left">Erklärung Gletscherrückgang</a></li>
       <li><a href="Gspritzt_map.html" class="active">Übersichtskarte Gletscher Tirol</a></li>
-      <li><a href="relationmap.html">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a></li>
+      <li><a href="relationmap.html">Orthophoto Vergleichskarte Nordtirol</a></li>
+      <li><a href="relationmap_st.html">Orthophoto Vergleichskarte Südtirol</a></li>
     </ul>
   </div>
 
@@ -94,12 +95,12 @@
       im Allgemeinen zwischen 1998 und 2006 stark zugenommen haben.Die beiden am stärksten vergletscherten Regionen
       in Tirol sind die Ötztaler und Stubaier Alpen Zusammen machen sie etwa 51% der Tiroler Gletscherfläche aus
     (Verein Gletscher Klima).
-    Für Südtirol gibt das italienische Gletscherinventar insgesamt 212 Gletscher an. Deren Gesamtfläche 
+    Für Südtirol gibt das italienische Gletscherinventar insgesamt 212 Gletscher an. Deren Gesamtfläche
     beträgt 2006 ca. 94,09 km². Im Vergleich zu 1997 waren es noch 161,28 km² in Südtirol. Die 212 Südtiroler
     Gletscher sind von West nach Ost  und von Nord nach Süd auf 7 Bergketten verteilt: Ortler Cevedale-Gruppe,
     Ötztaler Alpen (Weißkugel und Similaun), Texelgruppe, Stubaier  und Ahrntaler Alpen mit Hochfeiler, Rieserferner Gruppe,
     Hohe Tauern mit Dreiherrenspitze (Autonome Provinz Bozen).</p>
-    
+
 
     <div id="map"></div>
 
