--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <ul>
         <li><a href="index.html" style="float:left" class="active">Erklärung Gletscherrückgang</a></li>
         <li><a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a></li>
-        <li><a href="relationmap.html">Orthophoto Vergleichskarte Vergangenheit / Jetzt</a></li>
+        <li><a href="relationmap.html">Orthophoto Vergleichskarte Nordtirol</a></li>
+        <li><a href="relationmap_st.html">Orthophoto Vergleichskarte Südtirol</a></li>
       </ul>
     </div>
 
