fixed/added links and about us

--- a/Gspritzt_map.html
+++ b/Gspritzt_map.html
@@ -72,7 +72,8 @@
 
 <body>
   <div id="header">
-    <h2 class="white">Gletscher Tirols</h2>
+    <h2 class="white">Übersichtskarte Gletscher Tirol</h2>
+    <h3 class="white">Gletscher Tirols</h3>
 
   </div>
 
@@ -82,6 +83,7 @@
       <li><a href="Gspritzt_map.html" class="active">Übersichtskarte Gletscher Tirol</a></li>
       <li><a href="relationmap.html">Orthophoto Vergleichskarte Nordtirol</a></li>
       <li><a href="relationmap_st.html">Orthophoto Vergleichskarte Südtirol</a></li>
+      <li><a href="about_us.html">Über Uns</a></li>
     </ul>
   </div>
 
@@ -168,7 +170,7 @@
         erklären Gerhard Karl Lieb und Andreas Kellerer-Pirklbauer (Östereichischer Alpenverein). </p>
 
         <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php -->
-        <p>Weiter infos und ältere Gletscherberichte unter: <a href= "http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">Gletscherberichte des Österreichischen Alpenvereins</a> </p>
+        <p>Weiter Infos und ältere Gletscherberichte unter: <a href= "http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">Gletscherberichte des Österreichischen Alpenvereins</a> </p>
 
 
     <h3>Links</h3>
@@ -179,9 +181,19 @@
       <li> <a href= "http://wetter.provinz.bz.it/publikationen.asp"> Gletscherberichte für Südtirol</a></li>
       <li> <a href= "http://www.glaciologia.it/"> Gletscherarchiv Italien</a></li>
       <li> <a href= "http://www.gletscherarchiv.de/"> Gletscherarchiv Fotovergleich früher und heute</a></li>
+      <li> <a href= "http://www.glaziologie.at/gletscherinventar.html"> Österreichische Kommission für Glaziologie</a></li>
     </ul>
   </div>
 
+  <h3>Spannende Einträge AGU Blogosphere</h3>
+  <h3>From a Glacier's Perspective von Mauri Pelto</h3>
+  <ul>
+
+    <li> <a href= "https://blogs.agu.org/fromaglaciersperspective/2015/06/22/gepatsch-glacier-retreat-austria-1984-2013/"> Gepatsch Gletscher</a></li>
+    <li> <a href= "https://blogs.agu.org/fromaglaciersperspective/2018/06/01/schlegies-glacier-austria-response-to-climate-change-segmentation/"> Schlegeis Gletscher</a></li>
+
+  </ul>
+  </div>
 
   <div id="footer" class="gray">
     <p>placeholder footer</p>
