--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 <body>
   <div id="header">
-    <h2 class="white">Gspritzt Projekt Webmapping 2018!</h2>
-    <h3 class="white">Gspritzt Projekt Webmapping 2018! ... very WIP</h3>
+    <h2 class="white">Gletscherrückgang im Alpenraum</h2>
+    <h3 class="white">Gletscher und Klimawandel</h3>
   </div>
 
   <body>
@@ -31,6 +31,7 @@
         <li><a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a></li>
         <li><a href="relationmap.html">Orthophoto Vergleichskarte Nordtirol</a></li>
         <li><a href="relationmap_st.html">Orthophoto Vergleichskarte Südtirol</a></li>
+        <li><a href="about_us.html">Über Uns</a></li>
       </ul>
     </div>
 
@@ -99,25 +100,6 @@
       </p>
 
 
-
-      <!--<img src="images/Ablationspegel1.JPG" alt="Ausgeschmolzene Ablationspegel am Rieserferner" alt="Ausgeschmolzene Ablationspegel am Rieserferner"
-
-
-
-      <h3> header </h3>
-      <p>
-        text
-
-      </p>
-
-
-      <h1> in Arbeit </h1>
-      <!--http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php
-      <li>
-        <a href="http://www.alpenverein.at/portal/museum-archiv/gletschermessdienst/archiv-gletscherberichte/archiv-gletscherberichte.php">
-          Archiv der Gletscherberichte des Österreichischen Alpenvereins</a>
-      </li> -->
-
       <p>Weiterführende Informationen unter:</p>
 
       <!--<h3>Links</h3>-->
@@ -127,14 +109,10 @@
           <a href="https://www.zamg.ac.at/cms/de/klima"> Zentralanstalt für Meteorologie und Geodynamik (ZAMG)</a>
         </li>
         <li>
-          <a href=">https://www.eea.europa.eu/data-and-maps/data-providers-and-partners/world-glacier-monitoring-service">
-
-            World Glacier Monitoring Service (WGMS) </a>
+          <a href="https://www.eea.europa.eu/data-and-maps/data-providers-and-partners/world-glacier-monitoring-service">World Glacier Monitoring Service (WGMS) </a>
         </li>
         <li>
-          <a href=">https://climate.nasa.gov/climate_resources/4/graphic-dramatic-glacier-melt/">
-
-            Nasa (Graphic: Dramatic glacier melt )  </a>
+          <a href="https://climate.nasa.gov/climate_resources/4/graphic-dramatic-glacier-melt/">Nasa (Graphic: Dramatic glacier melt )  </a>
         </li>
 
       </ul>
