--- a/relationmap.html
+++ b/relationmap.html
@@ -42,8 +42,8 @@
   </head>
   <body>
     <div id="header">
-      <h2 class="white">Gletscher Tirols</h2>
-      <h3 class="white">Meltin!?</h3>
+      <h2 class="white">Orthophoto Vergleichskarte Nordtirol</h2>
+      <h3 class="white">Gletscher Tirols</h3>
     </div>
 
     <div class="topnav">
@@ -52,6 +52,7 @@
         <li><a href="Gspritzt_map.html">Übersichtskarte Gletscher Tirol</a></li>
         <li><a href="relationmap.html" class="active">Orthophoto Vergleichskarte Nordtirol</a></li>
         <li><a href="relationmap_st.html">Orthophoto Vergleichskarte Südtirol</a></li>
+        <li><a href="about_us.html">Über Uns</a></li>
       </ul>
     </div>
 
